Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -10,13 +10,15 @@
 
   <!-- Write your HTML here -->
   <table>
+    <tr>
+      <h1>City</h1>
+    </tr>
     <tr></tr>
     <tr></tr>
     <tr></tr>
     <tr></tr>
-    <tr></tr>
-    
   </table>
+
   
 </body>
 </html>
