Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -12,8 +12,11 @@
   <table>
     <tr>
       <h1>City</h1>
+      <h1>State</h1>
+      <h1>2017 estimate</h1>
     </tr>
-    <tr></tr>
+    <tr>
+    </tr>
     <tr></tr>
     <tr></tr>
     <tr></tr>
