Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <!-- Write your HTML here -->
   <table>
     <tr>
-      <h1>City</h1>
+      <th>City</th>
       <h1>State</h1>
       <h1>2017 estimate</h1>
     </tr>
