Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
       <h1>2017 estimate</h1>
     </tr>
     <tr>
-      
+      <td>New York</td>
+      <td>New York</td>
+      <td>8,622,698</td>
     </tr>
     <tr></tr>
     <tr></tr>
